# homeassistant-biketrax

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  README.md  hacs.json  pyproject.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: hassfest.yaml  lint.yaml  release-drafter.yml  test.yaml
custom_components/biketrax/: __init__.py  alarm_control_panel.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  device_tracker.py  manifest.json  sensor.py  strings.json  switch.py
custom_components/biketrax/translations/: de.json  en.json  nl.json
tests/: __init__.py
