[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
(
    \.git/
  | \.vscode/
  | env/
)
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "homeassistant-biketrax"
version = "1.1.2"
description = "Custom component for the PowUnity BikeTrax integration for Home Assistant."
authors = ["Bas Stottelaar <basstottelaar@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.12"
homeassistant = "~2024.4.0"
aiobiketrax = "1.1.2"

[tool.poetry.dev-dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-mypy = "^17.8.0"
isort = "^5.12.0"
pytest = "^7.4"
