[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
(
    \.git/
  | \.vscode/
  | env/
)
'''

[tool.isort]
profile = "black"

[tool.poetry]
name = "homeassistant-biketrax"
version = "2.0.0"
description = "Custom component for the PowUnity BikeTrax integration for Home Assistant."
authors = ["Bas Stottelaar <basstottelaar@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
homeassistant = "~2024.5.5"
aiobiketrax = "1.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
pytest = "^8.2"
mypy = "^1.10.0"
